Progreso en index

--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,24 @@
 /* Scss Document */
-/*@media (min-widht: 1365.98){
-	html{
-		font-size: 10px;
-	}
-}*/
-/*@include media-breakpoint-down(lg) { 
-	html{
-		font-size: 10px;
-	}
-	
-}*/
 body {
   width: 100%; }
+
+h1 {
+  font-size: 2.5rem; }
+
+h2 {
+  font-size: 2rem; }
+
+h3 {
+  font-size: 1.75rem; }
+
+h4 {
+  font-size: 1.5rem; }
+
+h5 {
+  font-size: 1.25rem; }
+
+h6 {
+  font-size: 1rem; }
 
 header {
   width: 100%;
@@ -23,9 +30,7 @@ header {
   header .bottom_bar {
     width: 100%;
     height: 6.5rem;
-    padding: 0 3%;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
+    padding: 0 5rem;
     display: inline-flex; }
     header .bottom_bar .logo_area {
       margin-top: auto;
@@ -34,29 +39,201 @@ header {
         height: 5rem; }
     header .bottom_bar .menu_area {
       height: 100%;
-      display: -webkit-inline-box;
-      display: -ms-inline-flexbox;
       display: inline-flex;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between; }
+      justify-content: flex-end; }
       header .bottom_bar .menu_area a {
         height: 100%;
-        padding: 3.5% 1%;
+        padding: 2.2rem 1rem;
         text-align: center;
         color: #6e6e6d; }
       header .bottom_bar .menu_area a:hover {
         background-color: #66a5dc;
         text-decoration: none;
         color: #ffffff; }
-      header .bottom_bar .menu_area h3 {
-        font-size: 1.2rem;
+      header .bottom_bar .menu_area h6 {
         font-weight: 400; }
+    header .bottom_bar #s_menu_area {
+      display: none; }
+    header .bottom_bar .burger_menu {
+      width: 3rem;
+      height: 2rem;
+      float: right;
+      margin-top: 2rem;
+      background-image: url("../img/burger_menu.png");
+      background-size: contain;
+      background-repeat: no-repeat; }
 
 #homepage_carousel {
   height: 31.25rem; }
   #homepage_carousel img {
     height: 31.25rem;
     width: 100%;
-    -o-object-fit: cover;
-    object-fit: cover; }
+    object-fit: cover;
+    z-index: 4; }
+  #homepage_carousel .carousel_filter {
+    width: 100%;
+    height: 31.25rem;
+    position: absolute;
+    background-color: #66a5dc;
+    opacity: 0.5;
+    z-index: 7; }
+  #homepage_carousel .carousel_text {
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    top: 10rem;
+    z-index: 9; }
+    #homepage_carousel .carousel_text h1 {
+      width: 50%;
+      margin-left: auto;
+      margin-right: auto;
+      color: #ffffff; }
+
+#services_preview {
+  width: 100%;
+  padding: 5rem 5rem;
+  background-color: #e2e2e2; }
+  #services_preview #services_preview_carousel_lg {
+    display: none; }
+  #services_preview #services_preview_carousel_md {
+    display: none; }
+  #services_preview #services_preview_carousel_sm {
+    display: none; }
+  #services_preview .services_preview_carousel .carousel-indicators {
+    position: relative;
+    margin-top: 3rem; }
+    #services_preview .services_preview_carousel .carousel-indicators li {
+      border-radius: 50%;
+      width: 1rem;
+      height: 1rem;
+      background-color: #66a5dc; }
+  #services_preview .services_preview_carousel .card {
+    max-width: 23%;
+    height: 25rem;
+    border-radius: 1.25rem; }
+    #services_preview .services_preview_carousel .card img {
+      height: 25rem;
+      object-fit: fill;
+      border-radius: 1.25rem; }
+    #services_preview .services_preview_carousel .card .card_filter {
+      height: 25rem;
+      width: 100%;
+      border-radius: 1.25rem;
+      background-color: #66a5dc;
+      position: absolute;
+      opacity: 0.5; }
+    #services_preview .services_preview_carousel .card .card-body {
+      position: absolute;
+      text-align: center;
+      margin-top: 3rem; }
+      #services_preview .services_preview_carousel .card .card-body .card-title {
+        color: #000000; }
+      #services_preview .services_preview_carousel .card .card-body .btn-primary {
+        padding: .375rem 1.75rem;
+        background-color: #66a5dc;
+        border: none; }
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  html {
+    font-size: 7px; }
+
+  #s_menu_area {
+    display: block !important; }
+
+  #l_menu_area {
+    display: none !important; }
+
+  header .bottom_bar {
+    padding: 0rem; }
+
+  #homepage_carousel .carousel_text h1 {
+    width: 90%; } }
+@media only screen and (min-width: 481px) and (max-width: 576px) {
+  html {
+    font-size: 8px; }
+
+  header .bottom_bar {
+    padding: 0 2rem; }
+
+  #l_menu_area {
+    display: none !important; }
+
+  #s_menu_area {
+    display: block !important; }
+
+  #services_preview #services_preview_carousel_sm {
+    display: block; } }
+@media only screen and (min-width: 576px) and (max-width: 1023px) {
+  html {
+    font-size: 9px; }
+
+  header .bottom_bar {
+    padding: 0 2.5rem; }
+
+  #l_menu_area {
+    display: none !important; }
+
+  #s_menu_area {
+    display: block !important; }
+
+  #services_preview #services_preview_carousel_md {
+    display: block; }
+  #services_preview .services_preview_carousel .card {
+    max-width: 29%; } }
+@media only screen and (min-width: 824px) {
+  html {
+    font-size: 10px; }
+
+  header .bottom_bar {
+    padding: 0 3rem; } }
+@media only screen and (min-width: 924px) {
+  html {
+    font-size: 11px; }
+
+  header .bottom_bar {
+    padding: 0 3rem; } }
+/* XS desktop ------------ */
+@media only screen and (min-width: 1024px) {
+  html {
+    font-size: 12px; }
+
+  header .bottom_bar {
+    padding: 0 3.5rem; }
+
+  #services_preview #services_preview_carousel_lg {
+    display: block; } }
+@media only screen and (min-width: 1124px) {
+  html {
+    font-size: 13px; }
+
+  header .bottom_bar {
+    padding: 0 4rem; } }
+/* Small screens ----------- */
+@media only screen and (min-width: 1224px) {
+  html {
+    font-size: 14px; }
+
+  header .bottom_bar {
+    padding: 0 4.5rem; } }
+@media only screen and (min-width: 1324px) {
+  html {
+    font-size: 15px; }
+
+  header .bottom_bar {
+    padding: 0 5rem; } }
+/* Mediunm screens ----------- */
+@media only screen and (min-width: 1424px) {
+  html {
+    font-size: 16px; } }
+/* Large screens ----------- */
+/* Retina displays ----------- */
+/*@media  only screen 
+and (-webkit-min-device-pixel-ratio : 2), 
+only screen 
+and (min-resolution: 192dpi) {
+	html{
+		font-size: 22px;
+	}
+
+}*/
