--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,15 @@ h5 {
 h6 {
   font-size: 1rem; }
 
+.hide {
+  display: none !important; }
+
+.show {
+  display: block !important; }
+
+.padding_2 {
+  padding: 2rem; }
+
 header {
   width: 100%;
   height: 8.5rem;
@@ -31,8 +40,6 @@ header {
     width: 100%;
     height: 6.5rem;
     padding: 0 5rem;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
     display: inline-flex; }
     header .bottom_bar .logo_area {
       margin-top: auto;
@@ -41,11 +48,7 @@ header {
         height: 5rem; }
     header .bottom_bar .menu_area {
       height: 100%;
-      display: -webkit-inline-box;
-      display: -ms-inline-flexbox;
       display: inline-flex;
-      -webkit-box-pack: end;
-      -ms-flex-pack: end;
       justify-content: flex-end; }
       header .bottom_bar .menu_area a {
         height: 100%;
@@ -74,7 +77,6 @@ header {
   #homepage_carousel img {
     height: 31.25rem;
     width: 100%;
-    -o-object-fit: cover;
     object-fit: cover;
     z-index: 4; }
   #homepage_carousel .carousel_filter {
@@ -100,12 +102,37 @@ header {
   width: 100%;
   padding: 5rem 5rem;
   background-color: #e2e2e2; }
+  #services_preview p {
+    font-size: 1.2rem;
+    text-align: justify; }
   #services_preview #services_preview_carousel_lg {
     display: none; }
   #services_preview #services_preview_carousel_md {
     display: none; }
   #services_preview #services_preview_carousel_sm {
     display: none; }
+    #services_preview #services_preview_carousel_sm ul {
+      height: 40rem;
+      padding: 0;
+      background-color: #ffffff; }
+      #services_preview #services_preview_carousel_sm ul p {
+        font-size: 1.5rem; }
+    #services_preview #services_preview_carousel_sm img {
+      width: 100%;
+      height: 20rem;
+      object-fit: cover; }
+    #services_preview #services_preview_carousel_sm .btn {
+      position: absolute;
+      bottom: 2rem;
+      right: 2rem;
+      border-radius: 50% !important;
+      height: 5rem !important;
+      width: 5rem !important;
+      background-color: #5596a8;
+      border: none;
+      display: flex;
+      justify-content: center;
+      font-size: 3rem; }
   #services_preview .services_preview_carousel .carousel-indicators {
     position: relative;
     margin-top: 3rem; }
@@ -117,10 +144,10 @@ header {
   #services_preview .services_preview_carousel .card {
     max-width: 23%;
     height: 25rem;
-    border-radius: 1.25rem; }
+    border-radius: 1.25rem;
+    justify-content: center; }
     #services_preview .services_preview_carousel .card img {
       height: 25rem;
-      -o-object-fit: fill;
       object-fit: fill;
       border-radius: 1.25rem; }
     #services_preview .services_preview_carousel .card .card_filter {
@@ -132,8 +159,7 @@ header {
       opacity: 0.5; }
     #services_preview .services_preview_carousel .card .card-body {
       position: absolute;
-      text-align: center;
-      margin-top: 3rem; }
+      text-align: center; }
       #services_preview .services_preview_carousel .card .card-body .card-title {
         color: #000000; }
       #services_preview .services_preview_carousel .card .card-body .btn-primary {
@@ -148,7 +174,6 @@ header {
     z-index: 1;
     height: 33rem;
     width: 100%;
-    -o-object-fit: cover;
     object-fit: cover; }
   #about_us_section .white_filter {
     position: absolute;
@@ -159,15 +184,8 @@ header {
   #about_us_section #text_container {
     position: absolute;
     top: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
     height: 33rem;
     width: 100%;
@@ -184,14 +202,24 @@ header {
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   html {
     font-size: 7px; }
+
   #s_menu_area {
     display: block !important; }
+
   #l_menu_area {
     display: none !important; }
+
   header .bottom_bar {
     padding: 0rem; }
+
   #homepage_carousel .carousel_text h1 {
     width: 90%; }
+
+  #services_preview {
+    padding: 5rem 2rem; }
+    #services_preview #services_preview_carousel_sm {
+      display: block; }
+
   #about_us_section {
     height: 43rem; }
     #about_us_section .background {
@@ -200,78 +228,83 @@ header {
       height: 45rem; }
     #about_us_section #text_container {
       height: 45rem; } }
-
 @media only screen and (min-width: 481px) and (max-width: 576px) {
   html {
     font-size: 8px; }
+
   header .bottom_bar {
     padding: 0 2rem; }
+
   #l_menu_area {
     display: none !important; }
+
   #s_menu_area {
     display: block !important; }
+
   #services_preview #services_preview_carousel_sm {
     display: block; } }
-
 @media only screen and (min-width: 576px) and (max-width: 1023px) {
   html {
     font-size: 9px; }
+
   header .bottom_bar {
     padding: 0 2.5rem; }
+
   #l_menu_area {
     display: none !important; }
+
   #s_menu_area {
     display: block !important; }
+
   #services_preview #services_preview_carousel_md {
     display: block; }
   #services_preview .services_preview_carousel .card {
     max-width: 29%; } }
-
 @media only screen and (min-width: 824px) {
   html {
     font-size: 10px; }
+
   header .bottom_bar {
     padding: 0 3rem; } }
-
 @media only screen and (min-width: 924px) {
   html {
     font-size: 11px; }
+
   header .bottom_bar {
     padding: 0 3rem; } }
-
 /* XS desktop ------------ */
 @media only screen and (min-width: 1024px) {
   html {
     font-size: 12px; }
+
   header .bottom_bar {
     padding: 0 3.5rem; }
+
   #services_preview #services_preview_carousel_lg {
     display: block; } }
-
 @media only screen and (min-width: 1124px) {
   html {
     font-size: 13px; }
+
   header .bottom_bar {
     padding: 0 4rem; } }
-
 /* Small screens ----------- */
 @media only screen and (min-width: 1224px) {
   html {
     font-size: 14px; }
+
   header .bottom_bar {
     padding: 0 4.5rem; } }
-
 @media only screen and (min-width: 1324px) {
   html {
     font-size: 15px; }
+
   header .bottom_bar {
     padding: 0 5rem; } }
-
 /* Mediunm screens ----------- */
 @media only screen and (min-width: 1424px) {
   html {
     font-size: 16px; } }
-
 /* Large screens ----------- */
 /* Retina displays ----------- */
 /*@media  only screen 
