--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,17 @@ h6{
 	font-size: 1rem;
 }
 
+.hide{
+	display: none!important;
+}
+
+.show{
+	display: block!important;
+}
+
+.padding_2{
+				padding: 2rem;
+			}
 header{
 	width: 100%;
 	height: 8.5rem;
@@ -117,6 +128,10 @@ header{
 	width: 100%;
 	padding: 5rem 5rem;
 	background-color: #e2e2e2;
+	p{
+		font-size: 1.2rem;
+    	text-align: justify;
+	}
 	#services_preview_carousel_lg{
 		display: none;
 	}
@@ -125,6 +140,32 @@ header{
 	}
 	#services_preview_carousel_sm{
 		display: none;
+		ul{
+			height: 40rem;
+			padding: 0;
+			background-color: #ffffff;
+			p{
+				font-size: 1.5rem;
+			}
+		}
+		img{
+			width: 100%;
+    		height: 20rem;
+    		object-fit: cover;
+		}
+		.btn{
+			position: absolute;
+   			bottom: 2rem;
+    		right: 2rem;
+			border-radius: 50%!important;
+      		height: 5rem!important;
+    		width: 5rem!important;
+			background-color: $main_blue;
+			border: none;
+			display: flex;
+			justify-content: center;
+			font-size: 3rem;
+		}
 	}
 	.services_preview_carousel{
 		.carousel-indicators{
@@ -141,6 +182,7 @@ header{
 			max-width: 23%;
 			height: 25rem;
 			border-radius: 1.25rem;
+			justify-content: center;
 			img{
 				height: 25rem;
 				object-fit: fill;
@@ -157,7 +199,6 @@ header{
 			.card-body{
 				position: absolute;
 				text-align: center;
-				margin-top: 3rem;
 				.card-title{
 					color: #000000;
 				}
@@ -236,7 +277,12 @@ and (max-width : 480px) {
 			}
 		}
 	}
-	
+	#services_preview{
+		padding: 5rem 2rem;
+		#services_preview_carousel_sm{
+			display: block;
+		}
+	}
 	#about_us_section{
 	height: 43rem;
 
