--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ header {
     width: 100%;
     height: 6.5rem;
     padding: 0 5rem;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex; }
     header .bottom_bar .logo_area {
       margin-top: auto;
@@ -48,7 +50,11 @@ header {
         height: 5rem; }
     header .bottom_bar .menu_area {
       height: 100%;
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
       display: inline-flex;
+      -webkit-box-pack: end;
+      -ms-flex-pack: end;
       justify-content: flex-end; }
       header .bottom_bar .menu_area a {
         height: 100%;
@@ -77,6 +83,7 @@ header {
   #homepage_carousel img {
     height: 31.25rem;
     width: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
     z-index: 4; }
   #homepage_carousel .carousel_filter {
@@ -120,6 +127,7 @@ header {
     #services_preview #services_preview_carousel_sm img {
       width: 100%;
       height: 20rem;
+      -o-object-fit: cover;
       object-fit: cover; }
     #services_preview #services_preview_carousel_sm .btn {
       position: absolute;
@@ -130,7 +138,11 @@ header {
       width: 5rem !important;
       background-color: #66a5dc;
       border: none;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
       font-size: 3rem; }
   #services_preview .services_preview_carousel .carousel-indicators {
@@ -142,6 +154,7 @@ header {
       height: 1rem;
       background-color: #66a5dc; }
   #services_preview .services_preview_carousel .card-deck {
+    -ms-flex-pack: distribute;
     justify-content: space-around; }
   #services_preview .services_preview_carousel .card {
     max-width: 23%;
@@ -149,6 +162,7 @@ header {
     border-radius: 1.25rem; }
     #services_preview .services_preview_carousel .card img {
       height: 25rem;
+      -o-object-fit: fill;
       object-fit: fill;
       border-radius: 1.25rem; }
     #services_preview .services_preview_carousel .card .card_filter {
@@ -164,8 +178,14 @@ header {
       position: absolute;
       text-align: center;
       color: #ffffff;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -ms-flex-pack: distribute;
       justify-content: space-around; }
       #services_preview .services_preview_carousel .card .card-body .btn-primary {
         padding: .375rem 1.75rem;
@@ -180,6 +200,7 @@ header {
     z-index: 1;
     height: 33rem;
     width: 100%;
+    -o-object-fit: cover;
     object-fit: cover; }
   #about_us_section .white_filter {
     position: absolute;
@@ -191,8 +212,15 @@ header {
   #about_us_section #text_container {
     position: absolute;
     top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     height: 33rem;
     width: 100%;
@@ -205,28 +233,163 @@ header {
       font-size: 1.3rem;
       margin: 0; }
 
+#sevices_section #services_banner {
+  position: relative;
+  height: 20rem;
+  color: #ffffff; }
+  #sevices_section #services_banner .banner {
+    z-index: 1;
+    height: 20rem;
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover; }
+  #sevices_section #services_banner .white_filter {
+    position: absolute;
+    height: 20rem;
+    z-index: 2;
+    top: 0;
+    background-color: #66a5dc;
+    opacity: 0.3; }
+  #sevices_section #services_banner .title_container {
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    height: 20rem;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    #sevices_section #services_banner .title_container .title {
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
+      width: fit-content; }
+
+#sevices_section #button_section {
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 2rem 5rem;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  #sevices_section #button_section .service_button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    height: 7rem;
+    width: 13rem;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 2rem;
+    border-radius: 13px;
+    border: none;
+    padding: 2rem;
+    color: #fff; }
+  #sevices_section #button_section .blue_button {
+    background-color: #34a9e1; }
+  #sevices_section #button_section .turquoise_button {
+    background-color: #28afb5; }
+
+#sevices_section #service_section {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 2rem 10rem;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  #sevices_section #service_section .info_section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: #e8e8e8;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 45rem;
+    padding: 0 2.5rem 2rem 2.5rem;
+    border-radius: 13px; }
+    #sevices_section #service_section .info_section .info_title {
+      margin: 3.5rem 0;
+      padding-bottom: 1rem;
+      border-bottom: 0.3rem solid #34a9e1; }
+    #sevices_section #service_section .info_section .info-text {
+      font-size: 1.3rem;
+      line-height: 2.5rem;
+      margin: 0;
+      text-align: justify; }
+  #sevices_section #service_section .service_img {
+    width: 25rem;
+    height: 28rem;
+    -o-object-fit: cover;
+    object-fit: cover;
+    margin: 2rem; }
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   html {
     font-size: 7px; }
-
   #s_menu_area {
     display: block !important; }
-
   #l_menu_area {
     display: none !important; }
-
   header .bottom_bar {
     padding: 0rem; }
-
   #homepage_carousel .carousel_text h1 {
     width: 90%; }
-
   #services_preview {
     padding: 5rem 2rem; }
     #services_preview #services_preview_carousel_sm {
       display: block; }
-
   #about_us_section {
     height: 43rem; }
     #about_us_section .background {
@@ -235,83 +398,78 @@ header {
       height: 45rem; }
     #about_us_section #text_container {
       height: 45rem; } }
+
 @media only screen and (min-width: 481px) and (max-width: 576px) {
   html {
     font-size: 8px; }
-
   header .bottom_bar {
     padding: 0 2rem; }
-
   #l_menu_area {
     display: none !important; }
-
   #s_menu_area {
     display: block !important; }
-
   #services_preview #services_preview_carousel_sm {
     display: block; } }
+
 @media only screen and (min-width: 576px) and (max-width: 1023px) {
   html {
     font-size: 9px; }
-
   header .bottom_bar {
     padding: 0 2.5rem; }
-
   #l_menu_area {
     display: none !important; }
-
   #s_menu_area {
     display: block !important; }
-
   #services_preview #services_preview_carousel_md {
     display: block; }
   #services_preview .services_preview_carousel .card {
     max-width: 29%; } }
+
 @media only screen and (min-width: 824px) {
   html {
     font-size: 10px; }
-
   header .bottom_bar {
     padding: 0 3rem; } }
+
 @media only screen and (min-width: 924px) {
   html {
     font-size: 11px; }
-
   header .bottom_bar {
     padding: 0 3rem; } }
+
 /* XS desktop ------------ */
 @media only screen and (min-width: 1024px) {
   html {
     font-size: 12px; }
-
   header .bottom_bar {
     padding: 0 3.5rem; }
-
   #services_preview #services_preview_carousel_lg {
     display: block; } }
+
 @media only screen and (min-width: 1124px) {
   html {
     font-size: 13px; }
-
   header .bottom_bar {
     padding: 0 4rem; } }
+
 /* Small screens ----------- */
 @media only screen and (min-width: 1224px) {
   html {
     font-size: 14px; }
-
   header .bottom_bar {
     padding: 0 4.5rem; } }
+
 @media only screen and (min-width: 1324px) {
   html {
     font-size: 15px; }
-
   header .bottom_bar {
     padding: 0 5rem; } }
+
 /* Mediunm screens ----------- */
 @media only screen and (min-width: 1424px) {
   html {
     font-size: 16px; } }
+
 /* Large screens ----------- */
 /* Retina displays ----------- */
 /*@media  only screen 
