--- a/css/main.scss
+++ b/css/main.scss
@@ -258,6 +258,116 @@ header{
 	}
 }
 
+#sevices_section{
+	#services_banner{
+		position: relative;
+		height: 20rem;
+		color: #ffffff;
+
+		.banner{
+			z-index: 1;
+			height: 20rem;
+			width: 100%;
+			object-fit: cover;
+		}
+		.white_filter{
+			position: absolute;
+			height:  20rem;
+			z-index: 2;
+			top: 0;
+			background-color: $main_blue;
+			opacity: 0.3;
+		}
+		.title_container{
+			position: absolute;
+			z-index: 3;
+			top: 0;
+			height: 20rem;
+			width: 100%;
+			display:flex;
+			flex-direction: row;
+			align-items: center;
+  			justify-content: center;
+
+			.title{
+				width: fit-content;
+			}
+		}
+	}
+	#button_section{
+		width: 100%;
+		height: fit-content;
+		display:flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		padding: 2rem 5rem;
+  		justify-content: center;
+
+		.service_button{
+			display:flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			height: 7rem;
+			width: 13rem;
+			align-items: center;
+  			justify-content: center;
+  			margin: 2rem;
+  			border-radius: 13px;
+  			border: none;
+  			padding: 2rem;
+  			color: #fff;
+		}
+
+		.blue_button{
+			background-color: #34a9e1;
+		}
+
+		.turquoise_button{
+			background-color: #28afb5;
+		}
+	}
+
+	#service_section{
+		height: fit-content;
+		display:flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		margin: 2rem 10rem;
+		align-items: center;
+		justify-content: center;
+
+		.info_section{
+			display:flex;
+			flex-direction: column;
+			align-items: center;
+			background-color: $main_gray;
+			height: fit-content;
+			width: 45rem;
+			padding: 0 2.5rem 2rem 2.5rem;
+			border-radius: 13px;
+
+			.info_title{
+				margin: 3.5rem 0;
+				padding-bottom: 1rem;
+				border-bottom: 0.3rem solid #34a9e1;
+			}
+			.info-text{
+				font-size: 1.3rem;
+				line-height: 2.5rem;
+				margin: 0;
+				text-align: justify;
+			}
+		}
+
+		.service_img{
+			width: 25rem;
+			height: 28rem;
+			object-fit: cover;
+			margin: 2rem;
+		}
+	}
+}
+
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
