--- a/css/main.css
+++ b/css/main.css
@@ -374,6 +374,135 @@ header {
     object-fit: cover;
     margin: 2rem; }
 
+#contact_section #contact_banner {
+  position: relative;
+  height: 20rem;
+  color: #ffffff; }
+  #contact_section #contact_banner .banner {
+    z-index: 1;
+    height: 20rem;
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover; }
+  #contact_section #contact_banner .white_filter {
+    position: absolute;
+    height: 20rem;
+    z-index: 2;
+    top: 0;
+    background-color: #66a5dc;
+    opacity: 0.3; }
+  #contact_section #contact_banner .title_container {
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    height: 20rem;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    #contact_section #contact_banner .title_container .title {
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
+      width: fit-content; }
+
+#contact_section #contact_container {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  #contact_section #contact_container .contact_form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 35rem;
+    height: 40rem;
+    background-color: #e8e8e8;
+    border-radius: 13px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 3.5rem;
+    margin: 2rem; }
+    #contact_section #contact_container .contact_form .form_title {
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
+      width: fit-content;
+      margin: 0 0 3.5rem 0;
+      padding-bottom: 1rem;
+      border-bottom: 0.3rem solid #34a9e1; }
+    #contact_section #contact_container .contact_form .name_input {
+      height: 3rem;
+      width: 49%;
+      padding: 1rem;
+      border: none; }
+    #contact_section #contact_container .contact_form .name_input:last-child {
+      float: right; }
+    #contact_section #contact_container .contact_form .asunto_input {
+      height: 3rem;
+      width: 100%;
+      padding: 1rem;
+      border: none;
+      margin-bottom: 1.5rem; }
+    #contact_section #contact_container .contact_form .text_input {
+      width: 100%;
+      height: 12rem;
+      border: none;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      resize: none; }
+    #contact_section #contact_container .contact_form .button_form {
+      height: 3rem;
+      width: 100%;
+      background-color: #66a5dc;
+      border: none;
+      color: #fff; }
+  #contact_section #contact_container .info_container {
+    width: 35rem;
+    height: 40rem;
+    margin: 2rem;
+    padding: 3.5rem;
+    padding-top: auto;
+    padding-bottom: auto;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    font-size: 1.2rem; }
+    #contact_section #contact_container .info_container .social_img {
+      width: 2.7rem;
+      height: 2.7rem; }
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   html {
