--- a/css/main.scss
+++ b/css/main.scss
@@ -368,6 +368,125 @@ header{
 	}
 }
 
+#contact_section{
+	#contact_banner{
+		position: relative;
+		height: 20rem;
+		color: #ffffff;
+
+		.banner{
+			z-index: 1;
+			height: 20rem;
+			width: 100%;
+			object-fit: cover;
+		}
+		.white_filter{
+			position: absolute;
+			height:  20rem;
+			z-index: 2;
+			top: 0;
+			background-color: $main_blue;
+			opacity: 0.3;
+		}
+		.title_container{
+			position: absolute;
+			z-index: 3;
+			top: 0;
+			height: 20rem;
+			width: 100%;
+			display:flex;
+			flex-direction: row;
+			align-items: center;
+  			justify-content: center;
+
+			.title{
+				width: fit-content;
+			}
+		}
+	}
+	#contact_container{
+		height: fit-content;
+		margin: 5rem;
+		display:flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+
+		.contact_form{
+			display:flex;
+			flex-direction: column;
+			width: 35rem;
+			height: 40rem;
+			background-color: $main_gray;
+			border-radius: 13px;
+			align-items: center;
+			padding: 3.5rem;
+			margin: 2rem;
+
+			.form_title{
+				width: fit-content;
+				margin: 0 0 3.5rem 0;
+				padding-bottom: 1rem;
+				border-bottom: 0.3rem solid #34a9e1;
+			}
+
+			.name_input{
+				height: 3rem;
+				width: 49%;
+				padding: 1rem;
+				border: none;
+			}
+
+			.name_input:last-child{
+				float: right;
+			}
+
+			.asunto_input{
+				height: 3rem;
+				width: 100%;
+				padding: 1rem;
+				border: none;
+				margin-bottom: 1.5rem;
+			}
+
+			.text_input{
+				width: 100%;
+				height: 12rem;
+				border: none;
+				padding: 1rem;
+				margin-bottom: 1.5rem;
+				resize: none;
+			}
+
+			.button_form{
+				height: 3rem;
+				width: 100%;
+				background-color: $main_blue;
+				border: none;
+				color: #fff;
+			}
+		}
+
+		.info_container{
+			width: 35rem;
+			height: 40rem;
+			margin: 2rem;
+			padding: 3.5rem;
+			padding-top: auto;
+			padding-bottom: auto;
+			align-items: center;
+  			justify-content: center;
+  			font-size: 1.2rem;
+
+  			.social_img{
+  				width: 2.7rem;
+  				height: 2.7rem;
+  			}
+		}
+	}
+}
+
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
@@ -393,8 +512,7 @@ and (max-width : 480px) {
 				width: 90%;
 			}
 		}
-	}
-	#services_preview{
+	}	#services_preview{
 		padding: 5rem 2rem;
 		#services_preview_carousel_sm{
 			display: block;
