--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
 
 $main_blue: #66a5dc;
 $main_gray: #e8e8e8;
+
 body {
     width: 100%;
 }
@@ -42,13 +43,34 @@ h6 {
     padding: 2rem;
 }
 
+.blue{
+	background-color: $main_blue;
+	color: #ffffff!important;
+}
+
 header {
     width: 100%;
-    height: 8.5rem;
+    height: fit-content;
     background-color: $main_gray;
     .top_bar {
-        height: 2rem;
+		min-height: 2rem;
+        height: fit-content;
         background-color: $main_blue;
+		ul{
+			width: 100%;
+			display: inline-flex;
+			justify-content: flex-end;
+			margin: 0;
+			padding: 0.5rem 2rem;
+		}
+		li{
+			list-style: none;
+			margin: 0rem 1rem;
+		}
+		img{
+			height: 2rem;
+			object-fit: contain;
+		}
     }
     .bottom_bar {
         width: 100%;
@@ -89,7 +111,7 @@ header {
             height: 2rem;
             float: right;
             margin-top: 2rem;
-            background-image: url("../img/burger_menu.png");
+            background-image: url("../img/icons/burger_menu.png");
             background-size: contain;
             background-repeat: no-repeat;
             background-color: $main_gray;
@@ -117,9 +139,41 @@ header {
     img {
         height: 31.25rem;
         width: 100%;
-        object-fit: cover;
-        z-index: 4;
     }
+	.first_slide{
+		background-image: url("../img/banner_assets/background_1.png");
+		background-size: cover;
+		img{
+			object-fit: contain;
+		}
+		.carousel_text {
+			background-image: url("../img/banner_assets/text_container_Mesa de trabajo 1.png");
+			background-size: cover;
+			width: 100%;
+			height: fit-content;
+			position: absolute;
+			z-index: 9;
+			bottom: 0;
+			text-align: center;
+			color: #ffffff;
+			padding: 1rem;
+			h1{
+				margin: 1rem 0;
+			}
+		}
+	}
+	.second_slide{
+		background-color: #000000;
+		img{
+			object-fit: contain!important;
+		}
+	}
+	.third_slide{
+		background-color: #000000;
+		img{
+			object-fit: contain!important;
+		}
+	}
     .carousel_filter {
         width: 100%;
         height: 31.25rem;
@@ -127,19 +181,6 @@ header {
         background-color: $main_blue;
         opacity: 0.5;
         z-index: 7;
-    }
-    .carousel_text {
-        width: 100%;
-        position: absolute;
-        text-align: center;
-        top: 10rem;
-        z-index: 9;
-        h1 {
-            width: 50%;
-            margin-left: auto;
-            margin-right: auto;
-            color: #ffffff;
-        }
     }
 }
 
@@ -253,32 +294,19 @@ header {
 
 #about_us_section {
     position: relative;
-    height: 33rem;
+    height: fit-content;
     color: #ffffff;
-    .background {
-        z-index: 1;
-        height: 33rem;
-        width: 100%;
-        object-fit: cover;
-    }
-    .white_filter {
-        position: absolute;
-        height: 33rem;
-        z-index: 2;
-        top: 0;
-        background-color: $main_blue;
-        opacity: 0.5;
-    }
+	background-image: url("../img/background_img/asset_1.jpg");
+	background-size: cover;
+	background-position: center;
     #text_container {
-        position: absolute;
-        top: 0;
+		background-color: #66a5dc87;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        height: 33rem;
+        height: fit-content;
         width: 100%;
-        z-index: 3;
-        padding: 2rem 5rem;
+        padding: 5rem 5rem;
         .about_us_title {
             margin-bottom: 2rem;
         }
@@ -367,7 +395,7 @@ header {
             align-items: center;
             background-color: $main_gray;
             height: fit-content;
-            width: 45rem;
+            width: 40rem;
             padding: 0 2.5rem 2rem 2.5rem;
             border-radius: 13px;
             .info_title {
@@ -388,10 +416,10 @@ header {
             }
         }
         .service_img {
-            width: 25rem;
-            height: 28rem;
-            object-fit: cover;
-            margin: 2rem;
+            max-width: 40rem;
+            object-fit: contain;
+            padding: 2rem 2.5rem 2rem 2.5rem;
+			text-align: center;
         }
     }
 }
@@ -454,16 +482,7 @@ header {
                 padding-bottom: 1rem;
                 border-bottom: 0.3rem solid #34a9e1;
             }
-            .name_input {
-                height: 3rem;
-                width: 49%;
-                padding: 1rem;
-                border: none;
-            }
-            .name_input:last-child {
-                float: right;
-            }
-            .asunto_input {
+            .form_input {
                 height: 3rem;
                 width: 100%;
                 padding: 1rem;
@@ -488,20 +507,57 @@ header {
         }
         .info_container {
             width: 35rem;
-            height: 40rem;
+            height: fit-content;
             margin: 2rem;
-            padding: 3.5rem;
-            padding-top: auto;
-            padding-bottom: auto;
-            align-items: center;
+            padding: 0rem 3.5rem;
+			display: flex;
+			flex-direction: column;
             justify-content: center;
             font-size: 1.2rem;
             .social_img {
-                width: 2.7rem;
                 height: 2.7rem;
+				object-fit: cover;
+				margin-right: 2rem;
             }
         }
     }
+	#thanks_popup{
+		display: none;
+		width: 100%;
+		height: fit-content;
+		position: fixed;
+		justify-content: center;
+		top: 45%;
+		z-index: 900;
+		div{
+			width: fit-content;
+			padding: 2rem;
+			background-color: $main_blue;
+			border-radius: 1rem;
+			color: #ffffff;
+			text-align: center;
+		}
+	}
+}
+
+footer{
+	width: 100%;
+	height: fit-content;
+	background-color: $main_blue;
+	padding: 2rem 5rem;
+	color: #ffffff;
+
+	ul{
+		display: inline-flex;
+		padding: 0;
+	}
+	li{
+		list-style: none;
+		margin-right: 2rem;
+	}
+	img{
+		height: 2rem;
+	}
 }
 
 
@@ -518,16 +574,16 @@ header {
         display: none!important;
     }
     header {
+		.top_bar{
+			ul{
+				display: none;
+			}
+		}
         .bottom_bar {
             padding: 0rem;
         }
     }
     #homepage_carousel {
-        .carousel_text {
-            h1 {
-                width: 90%;
-            }
-        }
     }
     #services_preview {
         padding: 5rem 2rem;
@@ -535,19 +591,7 @@ header {
             display: block;
         }
     }
-    #about_us_section {
-        height: 53rem;
-        .background {
-            height: 53rem;
-        }
-        .white_filter {
-            height: 53rem;
-        }
-        #text_container {
-            height: 53rem;
-            padding: 2rem 2rem;
-        }
-    }
+
     #contact_section {
         #contact_container {
             margin: 2rem;
